   - AccountsBookSummary: have balance and page break by class (todo #1390). 
   - AccountsBookSummary: sort by operation date or effect date (todo #1419). 
   - Balance check: distinguish between rough, validated and future balances (todo #1392).
   - Display unsettled entries on settleable accounts (todo #1381).
   - Display unreconciliated entries on reconciliable accounts (todo #783).
   - Export the FEC file (LPF - Article A47 A-1).
   - Integrity check: have a user preference to only display errors (todo #1409).
   - LedgerBookSummary: is now merged with LedgerBookRender (todo #1386).
   - Printings: allow the user to re-render as often as he wishes (todo #1384).
   - Printings: have a progress bar when printing (todo #1404).
   - Printings: have a plugin which can override ofaIRenderable interface (todo #1196).
   - Reconciliation group: display more columns (todo #1433).
   - Reconciliation group: let display entries and BAT files (todo #1434).
   - Reconciliation page auto-updates when an external identifier changes (todo #1407).
   - Reconciliation render take into account the last available BAT at date (todo #1420).
   - Recurrent operations validation: have a visual display of the status (todo #1369).
   - Restore assistant: allow admin credentials to be saved (todo #1416).

 Bug fixes:

   - Exercice closing: forward operation number are generated in the new exercice.
   - Exercice closing: rightly store last closing date and last entry number.
   - myICollectionable: make sure the dataset is loaded before first insertion.
   - ofaAccountFrameBin: fix notebook size when the dataset is empty.
   - ofaAccountPage: fix page display when the dataset is empty.
   - ofaAccountStore: let the treeview be repopulated on collection reload.
   - ofaOpeTemplateFrameBin: fix notebook size when the dataset is empty.
   - ofaOpeTemplatePage: fix page display when the dataset is empty.
   - ofaOpeTemplateStore: let the treeview be repopulated on collection reload.