@@ -29,6 +29,7 @@
    - Balance check: distinguish between rough, validated and future balances (todo #1392).
    - Display unsettled entries on settleable accounts (todo #1381).
    - Display unreconciliated entries on reconciliable accounts (todo #783).
+   - Entry properties: align counters, add tiers (todo #1426).
    - Export the FEC file (LPF - Article A47 A-1).
    - Integrity check: have a user preference to only display errors (todo #1409).
    - LedgerBookSummary: is now merged with LedgerBookRender (todo #1386).
